--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h2>Célébrez 2026 avec Style 🎉</h2>
         <p>Créez une carte de vœux personnalisée et professionnelle avec TechX — 
            un moyen élégant de souhaiter une bonne année à vos clients, partenaires et collaborateurs.</p>
-        <a href="carte.html" class="back-btn">➜ Créer ma carte de vœux 2026</a>
+        <a href="carte.html" class="btn">➜ Créer ma carte de vœux 2026</a>
         <button class="btn-cta" onclick="goToCard()">➜ Créer ma carte de vœux 2026</button>
     </section>
 
@@ -134,4 +134,5 @@
             );
         });
     </script>
+
 
