--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         <h2>Célébrez 2026 avec Style 🎉</h2>
         <p>Créez une carte de vœux personnalisée et professionnelle avec TechX — 
            un moyen élégant de souhaiter une bonne année à vos clients, partenaires et collaborateurs.</p>
-        <button class="btn-cta" onclick="goToCard()">➜ Créer ma carte de vœux 2026</button>
+        <a href="carte.html" class="btn-link">🎨 Créer ma carte de vœux 2026</a>
+        <!-- <button class="btn-cta" onclick="goToCard()">➜ Créer ma carte de vœux 2026</button> -->
     </section>
 
     <!-- CONTACT SECTION -->
@@ -133,6 +134,7 @@
             );
         });
     </script>
+
 
 
 
