--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             
         </p>
         <a href="carte.html" class="btn-link">🎨 Créer ma carte de vœux 2026</a>
-        <!-- <button class="btn-cta" onclick="goToCard()">➜ Créer ma carte de vœux 2026</button> -->
+        <button onclick="location.href='carte.html'">➜ Créer ma carte de vœux 2026</button>
     </section>
 
     <!-- CONTACT SECTION -->
@@ -137,6 +137,7 @@
             );
         });
     </script>
+
 
 
 
