--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         <h2>Célébrez 2026 avec Style 🎉</h2>
         <p>Créez une carte de vœux personnalisée et professionnelle avec TechX — 
            un moyen élégant de souhaiter une bonne année à vos clients, partenaires et collaborateurs.</p>
-        <p>
+        <!-- <p>
             
         </p>
-        <a href="carte.html" class="btn-link">🎨 Créer ma carte de vœux 2026</a>
+        <a href="carte.html" class="btn-link">🎨 Créer ma carte de vœux 2026</a> -->
         <button onclick="location.href='carte.html'">➜ Créer ma carte de vœux 2026</button>
     </section>
 
@@ -137,6 +137,7 @@
             );
         });
     </script>
+
 
 
 
